<resources>
    <string name="app_name">ticketToRide</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_game">Create Game</string>
    <string name="game_name">Game Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="register_user">Register</string>
    <string name="cancel">Cancel</string>


</resources>
